test/instance-checks-4.err.expect
test/instance-checks-4.ktn:1:36: error: expected scalar type int but got t1
test/instance-checks-4.ktn:1:20: note: int is from here
test/instance-checks-4.ktn:1:15: note: t1 is from here
