test/instance-checks-4.ktn
define example @a (int a -> a a) { }
